--- a/homework sheet 9/main.tex
+++ b/homework sheet 9/main.tex
@@ -44,4 +44,23 @@ That is
    \lim_{x \rightarrow 0} \sqrt{x} = \sqrt{0}
 \]
 
+\section*{Problem 2}
+We are given that f is continous at the point 0 and f(3x) = f(x) for all x. \\
+We want to show that f is constant on R. \\
+Let's call the the limit and the value of the function at 0 as \(L\). \\
+\[
+   \lim_{x \rightarrow 0} f(x) = f(0) = L
+\]
+So from the definiton of the continuity at 0 we have
+\[
+   \forall \epsilon > 0, \; \exists \delta > 0, \; 0 < |x| < \delta \implies |f(x) - L| < \epsilon
+\]
+So let's focus on \(x_0 = \delta / 2\). From the continuity at 0 we know that \(|f(x_0) - L| < \epsilon\).
+And from the definiton of f, the above inequality is satisfied for every \(x = 3^k x_0\), where \(k \in Z\).
+This means that the above inequality is satisfied for every \(x = 3^k \delta / 2\). In this case I chose \(x_0\) to be \(\delta / 2\)
+but in fact, \(x_0\) can be chosen to be any number in the interval \((0,\delta)\). And if we multiply this number by \(3^k\) we can get any real number.
+This tells us that every real number in the codomain of f stays in the \(\epsilon\) neighborhood of L.
+% NOTE(oguz, 16/12/25) we cant conclude the below statement directly from the above paragraph. needs more explanation but I am too lazy to do it.
+So every real number in the codomain of f is equal to L. Therefore, f is constant on R.
+
 \end{document}
