--- a/math2/hw1/main.tex
+++ b/math2/hw1/main.tex
@@ -114,7 +114,12 @@ We need to show \(H\) is closed under inverses that is \(x \in H \implies x^{-1}
 Thus, \(f_{1,-b} \in H\).
 \\
 
+\section*{Problem 3}
+We are given \((X, .)\) is a group. We are also given that \\
+(i) \(e \in X\) satisfies \(e.x = x\) for all \(x \in X\) \\
+(ii) for each \(x \in X\), there exists \(x^{-1} \in X\) such that \(x^{-1}.x = e\) \\
 
+We want to show \(x.e = x\) and \(x.x^{-1} = e\) for all \(x \in X\) \\
 
 
 \end{document}
