--- a/math2/hw2/main.tex
+++ b/math2/hw2/main.tex
@@ -9,5 +9,97 @@
    \textbf{Authors: Abdullah Oguz Topcuoglu \& Ahmed Waleed Ahmed Badawy Shora}
 \end{flushright}
 
+\section*{Problem 1}
+
+% The following tables show the results of the arithmetical operations in Z3 (where ⊕ and
+%  denote addition and multiplication modulo 3).
+% ⊕ [0] [1] [2]
+% [0] [0] [1] [2]
+% [1] [1] [2] [0]
+% [2] [2] [0] [1]
+%  [0] [1] [2]
+% [0] [0] [0] [0]
+% [1] [0] [1] [2]
+% [2] [0] [2] [1]
+% (a) Compute the corresponding tables for Z5 and Z7.
+% (b) Compute the corresponding tables for Z4 and deduce that (Z4, ⊕, ) is not a field
+% (where ⊕ and  denote addition and multiplication modulo 4).
+
+\subsection*{(a)}
+
+\(Z_5\):
+\[
+   \begin{array}{c|ccccc}
+   \oplus & 0 & 1 & 2 & 3 & 4 \\\hline
+   0 & 0 & 1 & 2 & 3 & 4 \\
+   1 & 1 & 2 & 3 & 4 & 0 \\
+   2 & 2 & 3 & 4 & 0 & 1 \\
+   3 & 3 & 4 & 0 & 1 & 2 \\
+   4 & 4 & 0 & 1 & 2 & 3 \\
+   \end{array}
+\]
+
+\[
+\begin{array}{c|ccccc}
+\times & 0 & 1 & 2 & 3 & 4 \\\hline
+0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 0 & 1 & 2 & 3 & 4 \\
+2 & 0 & 2 & 4 & 1 & 3 \\
+3 & 0 & 3 & 1 & 4 & 2 \\
+4 & 0 & 4 & 3 & 2 & 1 \\
+\end{array}
+\]
+
+\(Z_7\):
+\[
+   \begin{array}{c|ccccccc}
+   \oplus & 0 & 1 & 2 & 3 & 4 & 5 & 6 \\\hline
+   0 & 0 & 1 & 2 & 3 & 4 & 5 & 6 \\
+   1 & 1 & 2 & 3 & 4 & 5 & 6 & 0 \\
+   2 & 2 & 3 & 4 & 5 & 6 & 0 & 1 \\
+   3 & 3 & 4 & 5 & 6 & 0 & 1 & 2 \\
+   4 & 4 & 5 & 6 & 0 & 1 & 2 & 3 \\
+   5 & 5 & 6 & 0 & 1 & 2 & 3 & 4 \\
+   6 & 6 & 0 & 1 & 2 & 3 &4&5\\
+   \end{array}
+\]
+
+\[
+\begin{array}{c|ccccccc}
+\times & 0 & 1 & 2 & 3 & 4 & 5 & 6 \\\hline
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 0 & 1 & 2 & 3 & 4 & 5 & 6 \\
+2 & 0 & 2 & 4 & 6 & 1 & 3 & 5 \\
+3 & 0 & 3 & 6 & 2 & 5 & 1 & 4 \\
+4 & 0 & 4 & 1 & 5 & 2 & 6 & 3 \\
+5 & 0 & 5 & 3 & 1 & 6 & 4 & 2 \\
+6 & 0 & 6 & 5 & 4 & 3 & 2 & 1 \\
+\end{array}
+\]
+
+\subsection*{(b)}
+\(Z_4\):
+\[
+   \begin{array}{c|cccc}
+   \oplus & 0 & 1 & 2 & 3 \\\hline
+   0 & 0 & 1 & 2 & 3 \\
+   1 & 1 & 2 & 3 & 0 \\
+   2 & 2 & 3 & 0 & 1 \\
+   3 & 3 & 0 & 1 & 2 \\
+   \end{array}
+\]
+
+\[
+\begin{array}{c|cccc}
+\times & 0 & 1 & 2 & 3 \\\hline
+0 & 0 & 0 & 0 & 0 \\
+1 & 0 & 1 & 2 & 3 \\
+2 & 0 & 2 & 0 & 2 \\
+3 & 0 & 3 & 2 & 1 \\
+\end{array}
+\]
+
+\((Z_4, \oplus, \times)\) is not a field because \([2]\) does not have a multiplicative inverse. \\
+
 
 \end{document}
