--- a/math2/hw2/main.tex
+++ b/math2/hw2/main.tex
@@ -184,5 +184,49 @@ Thus, \(f\) is a bijection.
    (04)(15)(26)(37)
 \)
 
+\section*{Problem 3}
+
+% 3. Let p be a prime number.
+% (a) Suppose that [m] ∈ Zp \ {[0]}. Show that [i] 7→ [m].[i] is a bijection
+% Zp \ {[0]} 7→ Zp \ {[0]} (i.e. a permutation of Zp \ {[0]}).
+% (b) Write the permutations [i] 7→ [6].[i] and [i] 7→ [2].[i] von Z7 \ {[0]} in cyclic
+% notation.
+
+\subsection*{(a)}
+
+Let \(f: Z_p \setminus \{[0]\} \to Z_p \setminus \{[0]\}\) be:
+\[
+   f([i]) = [m].[i], \qquad [m] \in Z_p \setminus \{[0]\}
+\]
+We want to show that \(f\) is a bijection.
+\begin{itemize}
+   \item \textbf{Injective:} Suppose \(f([i_1]) = f([i_2])\):
+   \[
+      [m].[i_1] = [m].[i_2]
+   \]
+   Thus,
+   \[
+      [i_1] = [i_2]
+   \]
+   Thus, \(f\) is injective.
+   \item \textbf{Surjective:} Let \([j] \in Z_p \setminus \{[0]\}\). We want to show that there exists an \([x]\) such that \(f([x]) = [j]\):
+   \[
+      f([j . m^{-1}]) = [j . m^{-1}] . [m] = [j]
+   \]
+   Thus, \(f\) is surjective.
+\end{itemize}
+Thus, \(f\) is a bijection.
+
+\subsection*{(b)}
+\([i] \rightarrow [6].[i]\):
+\(
+   (0)(16)(25)(34)
+\)
+\\
+\([i] \rightarrow [2].[i]\):
+\(
+   (0)(124)(365)
+\)
+
 
 \end{document}
