--- a/math2/hw2/main.tex
+++ b/math2/hw2/main.tex
@@ -150,9 +150,13 @@ We want to show that \(f\) is a bijection.
    \[
       [i_1] + [m] = [i_2] + [m]
    \]
-   Thus,
    \[
-      [i_1] = [i_2]
+      [i_1 + m] = [i_2 + m]
+   \]
+   Thus, we have that n divides \((i_1 + m) - (i_2 + m)\). 
+    \\ Equivalently, n divides  \((i_1-i_2)\) 
+   \[
+     \therefore [i_1] = [i_2]
    \]
    Thus, \(f\) is injective.
    \item \textbf{Surjective:} Let \([j] \in Z_n\). We want to show that there exists an \([x]\) such that \(f([x]) = [j]\):
@@ -201,12 +205,16 @@ Let \(f: Z_p \setminus \{[0]\} \to Z_p \setminus \{[0]\}\) be:
 We want to show that \(f\) is a bijection.
 \begin{itemize}
    \item \textbf{Injective:} Suppose \(f([i_1]) = f([i_2])\):
+   
    \[
-      [m].[i_1] = [m].[i_2]
+      [m]\cdot[i_1] = [m]\cdot[i_2], [m\cdot i_1] = [m\cdot i_2]
    \]
-   Thus,
+   Thus, $P$ divides $(m\cdot i_1-m\cdot i_2)$.
+   \\ Equivalently, $P$ divides $(m\cdot (i_1- i_2))$. 
+   \\ Since $P$ is a prime number, $P$ divides either $m$ or $(i_1 -i_2)$.
+   \\ Since $m\in \mathbb{Z} \setminus \{[0]\} $, $P$ divides $(i_1 -i_2)$.
    \[
-      [i_1] = [i_2]
+     \therefore [i_1] = [i_2]
    \]
    Thus, \(f\) is injective.
    \item \textbf{Surjective:} Let \([j] \in Z_p \setminus \{[0]\}\). We want to show that there exists an \([x]\) such that \(f([x]) = [j]\):
