--- a/math2/hw3/main.tex
+++ b/math2/hw3/main.tex
@@ -270,8 +270,57 @@ Let \(q = e^{iz}\)
    q = \sqrt{\frac{2}{1-i}} = \sqrt{\frac{2(1+i)}{2}} = \sqrt{1 + i}
 \]
 
+\subsection*{(f)}
+\[
+   cos(z) = -\frac{5}{4}
+\]
+By definition of cos(z)
+\[
+   \frac{e^{iz} + e^{-iz}}{2} = -\frac{5}{4}
+\]
+\[
+   e^{iz} + e^{-iz} = -\frac{5}{2}
+\]
+Let \(q = e^{iz}\)
+\[
+   q + \frac{1}{q} = -\frac{5}{2}
+\]
+\[
+   q^2 + \frac{5}{2}q + 1 = 0
+\]
+\[
+   q = \frac{-\frac{5}{2} \pm \sqrt{(\frac{5}{2})^2 - 4}}{2}
+\]
+\[
+   q = \frac{-\frac{5}{2} \pm \frac{3}{2}}{2}
+\]
+\[
+   q_0 = \frac{-1}{2}, \qquad q_1 = -2
+\]
+\[
+   e^{iz_0} = -\frac{1}{2} = \frac{1}{2}e^{i\pi}
+\]
+\[
+   e^{iz_0 -i\pi} = \frac{1}{2}
+\]
+\[
+   iz_0 - i\pi = ln(\frac{1}{2})
+\]
+\[
+   z_0 = \frac{ln(\frac{1}{2}) + i\pi}{i}
+\]
 
-
-
+\[
+   e^{iz_1} = -2 = 2e^{i\pi}
+\]
+\[
+   e^{iz_1 - i\pi} = 2
+\]
+\[
+   iz_1 - i\pi = ln(2)
+\]
+\[
+   z_1 = \frac{ln(2) + i\pi}{i}
+\]
 
 \end{document}
