--- a/math2/hw3/main.tex
+++ b/math2/hw3/main.tex
@@ -323,4 +323,66 @@ Let \(q = e^{iz}\)
    z_1 = \frac{ln(2) + i\pi}{i}
 \]
 
+\subsection*{(g)}
+\[
+   z + \bar{z} = 1
+\]
+Let \(z = x + iy\)
+\[
+   x + iy + x - iy = 1
+\]
+\[
+   2x = 1
+\]
+\[
+   x = \frac{1}{2}
+\]
+\[
+   z = \frac{1}{2} + iy, \qquad y \in R
+\]
+
+\subsection*{(h)}
+\[
+   z^2 + 2\bar{z}^2 + z - \bar{z} + 9 = 0
+\]
+Let \(z = x + iy\)
+\[
+   (x + iy)^2 + 2(x - iy)^2 + (x + iy) - (x - iy) + 9 = 0
+\]
+\[
+   9 - 2iy + x^2 + 2xyi - y^2 + 2x^2 - 4xyi -y^2 = 0
+\]
+\[
+   9 - 2iy + 3x^2 - 2xyi - 2y^2 = 0
+\]
+\[
+   9 + 3x^2 - 2y^2 = 0, \quad -2 - 2xy = 0
+\]
+\[
+   x = -\frac{1}{y}
+\]
+Insert this in the first equation
+\[
+   9 - \frac{3}{y^2} - 2y^2 = 0
+\]
+\[
+   4y^4 - 9y^2 + 3 = 0
+\]
+\[
+   y^2 = \frac{9 \pm \sqrt{81 - 48}}{8} = \frac{9 \pm 3\sqrt{3}}{8}
+\]
+\[
+   y = \pm \sqrt{\frac{9 \pm 3\sqrt{3}}{8}}
+\]
+\[
+   x = -\frac{1}{y}
+\]
+\[
+   x = \pm \sqrt{\frac{8}{9 \pm 3\sqrt{3}}}
+\]
+\[
+   z = \pm \sqrt{\frac{8}{9 \pm 3\sqrt{3}}} \pm i\sqrt{\frac{9 \pm 3\sqrt{3}}{8}}
+\]
+
+
 \end{document}
