--- a/math2/hw3/main.tex
+++ b/math2/hw3/main.tex
@@ -2,6 +2,7 @@
 \usepackage{amsmath, amsthm, amssymb}
 \usepackage{tikz}
 \usepackage{array}
+\usepackage{graphicx} % Added for including the PDF file as an image
 
 \begin{document}
 \section*{\huge Mathematics Homework Sheet 3}
@@ -384,5 +385,20 @@ Insert this in the first equation
    z = \pm \sqrt{\frac{8}{9 \pm 3\sqrt{3}}} \pm i\sqrt{\frac{9 \pm 3\sqrt{3}}{8}}
 \]
 
+
+\section*{Problem 2}
+
+% 2. Let
+% A = {z ∈ C : |z − 2 − 3i| < |z + 4 − 5i|},
+% B = {z ∈ C : 0 ≤ arg(z + 3 − 4i) < π/4}.
+% Sketch the sets A, B and A ∩ B.
+
+% Include the PDF file for Problem 2
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=\textwidth]{2025-04-28-Note-13-03.pdf}
+    \caption{Visualization for Problem 2}
+    \label{fig:problem2}
+\end{figure}
 
 \end{document}
