--- a/math2/hw3/main.tex
+++ b/math2/hw3/main.tex
@@ -448,4 +448,28 @@ Using de Moivre's theorem
    Im(z) = \frac{1}{\cos\left(\frac{(4m + 1)\pi}{4n}\right)^n} \sin\left(\frac{(4m + 1)\pi}{4}\right)
 \]
 
+\section*{Problem 4}
+
+% 4. Prove that (C, +, ·) is not an ordered field. [Hint: Show that each of the assumptions
+% i > 0 and i < 0 lead to a contradiction.]
+In an ordered field the following must hold \(0 < 1\) \\
+Assume \(i > 0\)
+
+\begin{align*}
+   0 &< i & \text{(multiply by i)}\\
+   0 &< i^2 & \text{}\\
+   0 &< -1 & \text{(add 1)}\\
+   1 &< 0 & \text{this is a contradiction}\\
+\end{align*}
+\\
+Assume \(i < 0\)
+\begin{align*}
+   0 &< -i & \text{(multiply by -i)}\\
+   0 &< i^2 & \text{}\\
+   0 &< -1 & \text{(add 1)}\\
+   1 &< 0 & \text{this is a contradiction}\\
+\end{align*}
+
+Thus, we have shown that both assumptions lead to a contradiction. Therefore, \((C, +, \cdot)\) is not an ordered field.
+
 \end{document}
