--- a/math2/hw3/main.tex
+++ b/math2/hw3/main.tex
@@ -4,7 +4,10 @@
 \usepackage{array}
 \usepackage{graphicx} % Added for including the PDF file as an image
 \usepackage{float}
-
+\usepackage{mathpazo}
+\usetikzlibrary{angles, quotes}
+\usepackage{longdivision}
+\usepackage[margin=1in]{geometry}
 \begin{document}
 \section*{\huge Mathematics Homework Sheet 3}
 \begin{flushright}
@@ -186,60 +189,13 @@ By definiton of sinh
 \[
    \frac{e^z - e^{-z}}{2} = i
 \]
-By definition of \(e^z\)
-\[
-   \frac{e^x(cos(y) + sin(y)i) + e^{-x}(cos(-y) + sin(-y)i))}{2} = i
-\]
-where \(z = x + iy\).
-\[
-   e^x(cos(y) + sin(y)i) + e^{-x}(cos(-y) + sin(-y)i)) = 2i
-\]
-\[
-   e^x(cos(y) + sin(y)i) + e^{-x}(cos(y) - sin(y)i)) = 2i
-\]
-\[
-   e^x cos(y) + e^x sin(y)i + e^{-x} cos(y) - e^{-x} sin(y) i = 2i
-\]
-\[
-   (e^x cos(y) + e^{-x} cos(y)) + (e^x sin(y) - e^{-x} sin(y)) i = 0 + 2i
-\]
-\[
-   e^x cos(y) + e^{-x} cos(y) = 0, \qquad e^x sin(y) - e^{-x} sin(y) = 2
-\]
-\[
-   e^x cos(y) + e^{-x} cos(y) = 0 \implies cos(y) = 0
-\]
-\[
-   y = \frac{\pi}{2} + k\pi, \quad k \in \mathbb{Z}
-\]
-\[
-   e^x sin(y) - e^{-x} sin(y) = 2
-\]
-\[
-   sin(y)(e^x - e^{-x}) = 2
-\]
-\[
-   sin(\frac{\pi}{2} + k \pi)(e^x - e^{-x}) = 2 \implies e^x - e^{-x} = \pm 2
-\]
-Let \(r = e^x\)
-\[
-   r - \frac{1}{r} = 2 \implies r^2 - 2r - 1 = 0
-\]
-or
-\[
-   r - \frac{1}{r} = -2 \implies r^2 + 2r - 1 = 0
-\]
-\[
-   r = \frac{2 \pm \sqrt{4 + 4}}{2} = 1 \pm \sqrt{2}
-\]
-\[
-   r = \frac{-2 \pm \sqrt{4 + 4}}{2} = -1 \pm \sqrt{2}
-\]
-\[
-   e^x = \sqrt{2} \pm 1 \implies x = ln(\sqrt{2} \pm 1), \qquad \sqrt{2} \pm 1 > 0
-\]
-
-\(z = x+yi\) where \(x = ln(\sqrt{2} + 1)\) or \(x = ln(\sqrt{2} - 1)\) and \(y = \frac{\pi}{2} + k\pi\)
+Multiplying both sides by \(2e^z\), we get:
+\[e^{2z} - 1 = 2ie^z\]
+\[e^{2z} - 2ie^z -1 = 0\]
+Solving for \(e^z\) with \(a= 1, b = -2i, c = -1
+\):
+\[e^z = \frac{2i}{2}\pm \sqrt{\frac{-4+4}{4}} = i=1\cdot e^{i\frac{\pi}{2}}\]
+\[z= i(\frac{\pi}{2}+2n\pi), n\in\mathbb{Z}\]
 
 \subsection*{(e)}
 \[
@@ -258,19 +214,11 @@ By definition of sin(z) and cos(z)
 \[
    e^{iz} - e^{-iz} = i(e^{iz} + e^{-iz})
 \]
-Let \(q = e^{iz}\)
-\[
-   q - \frac{1}{q} = i(q + \frac{1}{q})
-\]
-\[
-   q^2 - 1 = iq^2 + 1
-\]
-\[
-   q^2(1-i) - 2 = 0
-\]
-\[
-   q = \sqrt{\frac{2}{1-i}} = \sqrt{\frac{2(1+i)}{2}} = \sqrt{1 + i}
-\]
+   \[e^{2iz} - 1 = i(e^{2iz} + 1)\]
+   \[e^{2iz}(1-i) = 1+i\]
+   \[e^{2iz}= \frac{1+i}{1-i} = \frac{\sqrt{2}e^{i\frac{\pi}{4}}}{\sqrt{2}e^{-i\frac{\pi}{4}}} = e^{i\frac{\pi}{2}}\]
+   \[2z=\frac{\pi}{2} + 2n\pi , n \in \mathbb{Z}\]
+   \[z=\frac{\pi}{4} + n\pi , n \in \mathbb{Z}\]
 
 \subsection*{(f)}
 \[
@@ -352,57 +300,415 @@ Let \(z = x + iy\)
    (x + iy)^2 + 2(x - iy)^2 + (x + iy) - (x - iy) + 9 = 0
 \]
 \[
-   9 - 2iy + x^2 + 2xyi - y^2 + 2x^2 - 4xyi -y^2 = 0
+   9 - 2iy + x^2 + 2xyi - y^2 + 2x^2 - 4xyi -2y^2 = 0
 \]
 \[
-   9 - 2iy + 3x^2 - 2xyi - 2y^2 = 0
+   9 - 2iy + 3x^2 - 2xyi - 3y^2 = 0
 \]
 \[
-   9 + 3x^2 - 2y^2 = 0, \quad -2 - 2xy = 0
+   9 + 3x^2 - 3y^2 = 0, \quad -2y - 2xy = 0
 \]
 \[
-   x = -\frac{1}{y}
+   x = 1
 \]
 Insert this in the first equation
 \[
-   9 - \frac{3}{y^2} - 2y^2 = 0
+   9 + 3 - 3y^2 = 0
 \]
 \[
-   4y^4 - 9y^2 + 3 = 0
+   y^2 = 4
 \]
 \[
-   y^2 = \frac{9 \pm \sqrt{81 - 48}}{8} = \frac{9 \pm 3\sqrt{3}}{8}
-\]
-\[
-   y = \pm \sqrt{\frac{9 \pm 3\sqrt{3}}{8}}
-\]
-\[
-   x = -\frac{1}{y}
-\]
-\[
-   x = \pm \sqrt{\frac{8}{9 \pm 3\sqrt{3}}}
-\]
-\[
-   z = \pm \sqrt{\frac{8}{9 \pm 3\sqrt{3}}} \pm i\sqrt{\frac{9 \pm 3\sqrt{3}}{8}}
+   y =  \pm 2
 \]
 
+\[
+   z = 1\pm2i 
+\]
+\subsection*{(i)}
+\[(1 - i)z^2 = 1 + 7i\]
+\[z^2 = \frac{1 + 7i}{1-i} = \frac{(1+7i)(1+i)}{2} = \frac{1+i+7i-7}{2} = -3+4i \]
+\[z = \pm \sqrt{-3+4i}\]
+\subsection*{(j)}
+\[(1 - i)z^2 = (1 + i)z\]
+\[
+(1 - i)z^2 - (1 + i)z = 0
+\]
+\[
+z\left[(1 - i)z - (1 + i)\right] = 0
+\]
+\[
+z = 0 \quad \text{or} \quad (1 - i)z = 1 + i
+\]
 
+\[
+z = \frac{1 + i}{1 - i} = \frac{(1 + i)(1 + i)}{(1 - i)(1 + i)} = \frac{(1 + 2i + i^2)}{1 + 1} = \frac{1 + 2i -1}{2} = \frac{2i}{2} = i
+\]
+
+\[
+\Rightarrow z = 0 \quad \text{or} \quad z = i
+\]
+\subsection*{(k)}
+\[z^4-4z^2+16=0\]
+Solving for $z^2$ using a = 1, b = -4 and c = 16, we get:
+\[z^2 =\frac{4\pm\sqrt{16-4\cdot16}}{2} = 2\pm\frac{\sqrt{-48}}{2} = 2\pm 2\sqrt{3} i  = 4e^{\pm i\frac{\pi}{3}}\]
+\[z=\pm 2e^{\pm i\frac{\pi}{6}}\]
+\subsection*{(l)}
+\[z^3 = 1 \]
+We know that $z=1$ is one of the solutions.
+We divide \( z^3 - 1 \) by \( z - 1 \) using polynomial long division:
+
+
+\begin{align*}
+&\underline{z^3 - 1 \div z - 1} \\
+&\text{Step 1: } z^3 \div z = z^2 \\
+&\quad \Rightarrow z^2(z - 1) = z^3 - z^2 \\
+&\quad \text{Subtract: } (z^3 - 1) - (z^3 - z^2) = z^2 - 1 \\
+\\
+&\text{Step 2: } z^2 \div z = z \\
+&\quad \Rightarrow z(z - 1) = z^2 - z \\
+&\quad \text{Subtract: } (z^2 - 1) - (z^2 - z) = z - 1 \\
+\\
+&\text{Step 3: } z \div z = 1 \\
+&\quad \Rightarrow 1(z - 1) = z - 1 \\
+&\quad \text{Subtract: } (z - 1) - (z - 1) = 0 \\
+\\
+&\therefore \quad \frac{z^3 - 1}{z - 1} = z^2 + z + 1
+\end{align*}
+\[z^3-1=(z-1)(z^2 + z + 1) = 0\]
+\[z= -\frac{1}{2}\pm\sqrt{-\frac{3}{4}} = -\frac{1}{2}\pm\frac{\sqrt{3}}{2}i \]
+\[z = 1 \quad\text{or} \quad z= -\frac{1}{2}\pm\frac{\sqrt{3}}{2}i\]
+\subsection*{(m)}
+\[
+(z^2 - 1)^3 = (2z)^3
+\;\Longrightarrow\;
+z^2 - 1 = 2z,\quad
+z^2 - 1 = 2z\Bigl(-\tfrac12 + i\tfrac{\sqrt3}{2}\Bigr),\quad
+z^2 - 1 = 2z\Bigl(-\tfrac12 - i\tfrac{\sqrt3}{2}\Bigr).
+\]
+
+% Case 1: root = 1
+\textbf{Case 1:}\quad $z^2 - 1 = 2z$
+\[
+z^2 - 2z - 1 = 0
+\quad\Longrightarrow\quad
+z = \frac{2 \pm \sqrt{8}}{2} = 1 \pm \sqrt2.
+\]
+
+% Case 2: root = -1/2 + i√3/2
+\textbf{Case 2:}\quad $z^2 - 1 = 2z\bigl(-\tfrac12 + i\tfrac{\sqrt3}{2}\bigr)$
+\[
+z^2 + \bigl(1 - i\sqrt3\bigr)z - 1 = 0
+\quad\Longrightarrow\quad
+z = \frac{-\,(1 - i\sqrt3) \pm \sqrt{(1 - i\sqrt3)^2 + 4}}{2}
+= \frac{-1 + \sqrt3}{2} \pm i\,\frac{\sqrt3 - 1}{2}.
+\]
+
+% Case 3: root = -1/2 - i√3/2
+\textbf{Case 3:}\quad $z^2 - 1 = 2z\bigl(-\tfrac12 - i\tfrac{\sqrt3}{2}\bigr)$
+\[
+z^2 + \bigl(1 + i\sqrt3\bigr)z - 1 = 0
+\quad\Longrightarrow\quad
+z = \frac{-\,(1 + i\sqrt3) \pm \sqrt{(1 + i\sqrt3)^2 + 4}}{2}
+= \frac{-1 - \sqrt3}{2} \pm i\,\frac{\sqrt3 + 1}{2}.
+\]
+
+\bigskip
+
+\[
+\boxed{
+\begin{aligned}
+&z = 1 \pm \sqrt2,\\
+&z = \frac{-1 + \sqrt3}{2}\,\pm\,i\,\frac{\sqrt3 - 1}{2},\\
+&z = \frac{-1 - \sqrt3}{2}\,\pm\,i\,\frac{\sqrt3 + 1}{2}.
+\end{aligned}
+}
+\]
+\subsection*{(n)}
+\[
+z^4 + 1 = 0
+\;\Longrightarrow\;
+z^4 = -1 = e^{i(\pi + 2\pi k)},\quad k\in \mathbb{Z}
+\]
+\[
+z = e^{i\bigl(\frac{\pi + 2\pi k}{4}\bigr)}
+    = e^{i\bigl(\tfrac\pi4 + \tfrac{\pi k}{2}\bigr)},
+\quad k\in \mathbb{Z}
+\]
+Taking k s that will get us an angle in  $(-\pi,\pi]$,
+\[
+z = e^{i\pi/4},\; e^{i3\pi/4},\; e^{i5\pi/4},\; e^{i7\pi/4},
+\]
+\subsection*{(o)}
+\[
+z^6 - 3i\,z^3 - 2 = 0.
+\]
+Set \(w = z^3\).  Then
+\[
+w^2 - 3i\,w - 2 = 0
+\;\Longrightarrow\;
+w = \frac{3i \pm \sqrt{(-3i)^2 + 8}}{2}
+= \frac{3i \pm i}{2}
+= \begin{cases}2i,\\[4pt]i.\end{cases}
+\]
+Hence we must solve
+\[
+z^3 = 2i
+\quad\text{and}\quad
+z^3 = i.
+\]
+By taking cube-roots (as in your solution of \(z^3=1\)), we get
+
+1. For \(z^3=2i=2e^{i\pi/2}\):
+\[
+z = (2)^{1/3} \exp\!\Bigl(i\frac{\pi/2 + 2\pi k}{3}\Bigr)
+= 2^{1/3}e^{\,i(\pi/6 + 2\pi k/3)},\quad k=0,1,2.
+\]
+
+2. For \(z^3=i=e^{i\pi/2}\):
+\[
+z = \exp\!\Bigl(i\frac{\pi/2 + 2\pi k}{3}\Bigr)
+= e^{\,i(\pi/6 + 2\pi k/3)},\quad k=0,1,2.
+\]
+
+Thus the six solutions are
+\[
+\boxed{
+z = 2^{1/3}e^{\,i(\pi/6 + 2\pi k/3)},\quad
+z = e^{\,i(\pi/6 + 2\pi k/3)},
+\quad k=0,1,2.
+}
+\]
+\subsection*{(p)}
+We factor first:
+\[
+z^3 + 2z^2 + 2z = z(z^2 + 2z + 2) = 0.
+\]
+
+One solution is:
+\[
+z = 0.
+\]
+
+For the quadratic \(z^2 + 2z + 2 = 0\), use the quadratic formula with \(a = 1\), \(b = 2\), \(c = 2\):
+\[
+z = \frac{-2 \pm \sqrt{2^2 - 4 \cdot 1 \cdot 2}}{2 \cdot 1}
+= \frac{-2 \pm \sqrt{-4}}{2}
+= \frac{-2 \pm 2i}{2}
+= -1 \pm i.
+\]
+
+\[
+\boxed{z = 0,\quad z = -1 + i,\quad z = -1 - i}
+\]
+\subsection*{(q)}
+We write \(1 = e^{2\pi i k}\), so:
+\[
+e^z = e^{2\pi i k} \Rightarrow z = 2\pi i k, \quad k \in \mathbb{Z}.
+\]
+\[
+\boxed{z = 2\pi i k}
+\]
+\subsection*{(r)}
+We solve:
+\[
+e^z = e^{iz}.
+\]
+
+Equating exponents up to a multiple of \(2\pi i\), we write:
+\[
+z = iz + 2\pi i k, \quad k \in \mathbb{Z}.
+\]
+
+Solving:
+\[
+z - iz = 2\pi i k
+\Rightarrow z(1 - i) = 2\pi i k
+\Rightarrow z = \frac{2\pi i k}{1 - i}.
+\]
+
+Multiply numerator and denominator by \(1 + i\):
+\[
+z = \frac{2\pi i k (1 + i)}{2} = \pi i k (1 + i).
+\]
+
+Now write:
+\[
+z = \pi k i (1 + i) = \pi k (-1 + i), \quad \text{since } i^2 = -1.
+\]
+
+So:
+\[
+\boxed{z = \pi k(-1 + i), \quad k \in \mathbb{Z}}
+\]
+
+\textbf{Restricting to angles in } \((- \pi, \pi]\), we consider only values of \(k\) such that:
+\[
+\arg(e^z) = \arg(e^{iz}) \in (-\pi, \pi]
+\Rightarrow \text{we need } \operatorname{Im}(z) = \pi k \in (-\pi, \pi].
+\]
+
+Thus \(k = -1, 0, 1\). Therefore:
+\[
+\boxed{
+\begin{aligned}
+k = -1 &\Rightarrow z = \pi (1 - i) \\
+k = 0 &\Rightarrow z = 0 \\
+k = 1 &\Rightarrow z = \pi (-1 + i)
+\end{aligned}
+}
+\]
+
+Final boxed form:
+\[
+\boxed{
+z \in \left\{ \pi(1 - i),\; 0,\; \pi(-1 + i) \right\}
+}
+\]
+\subsection*{(s)}
+Given:
+\[
+e^{iz} + 4e^{-iz} = 4
+\]
+
+Multiply both sides by \(e^{iz}\):
+\[
+e^{2iz} + 4 = 4e^{iz}
+\Rightarrow e^{2iz} - 4e^{iz} + 4 = 0
+\]
+
+Let \(w = e^{iz}\), then:
+\[
+w^2 - 4w + 4 = 0
+\Rightarrow (w - 2)^2 = 0 \Rightarrow w = 2
+\]
+
+Now solve:
+\[
+e^{iz} = 2 \Rightarrow iz = \ln 2 + 2\pi i k
+\Rightarrow z = -i \ln 2 + 2\pi k, \quad k \in \mathbb{Z}
+\]
+
+\[
+\boxed{z = 2\pi k - i \ln 2}
+\]
+\subsection*{(t)}
+Given:
+\[
+e^{2z} + i e^z + 1 = 0
+\]
+
+Let \(w = e^z\), then:
+\[
+w^2 + i w + 1 = 0
+\Rightarrow w = \frac{-i \pm \sqrt{i^2 - 4}}{2} = \frac{-i \pm \sqrt{-1 - 4}}{2} = \frac{-i \pm \sqrt{-5}}{2}
+\]
+
+\[
+w = \frac{-i \pm i\sqrt{5}}{2} = i \cdot \frac{-1 \pm \sqrt{5}}{2}
+\]
+
+Now solve \(e^z = w\):
+\[
+z = \ln\left(i \cdot \frac{-1 \pm \sqrt{5}}{2}\right) + 2\pi i k
+\]
+
+\[
+\boxed{z = \ln\left(i \cdot \tfrac{-1 \pm \sqrt{5}}{2}\right) + 2\pi i k}
+\]
 \section*{Problem 2}
+%--------------------
+\section*{Set \(A\)}
+\[
+A = \{z\in\mathbb{C} : |z-(2+3i)| < |z-(-4+5i)|\},
+\]
+i.e.\ the half‐plane on the side of the perpendicular bisector of \((2,3)\)--\((-4,5)\)\,containing \((2,3)\).
+\begin{center}
+\begin{tikzpicture}[scale=0.6]
+  % Points
+  \coordinate (P) at (2,3);
+  \coordinate (Q) at (-4,5);
+  \fill (P) circle (2pt) node[below right] {\(2+3i\)};
+  \fill (Q) circle (2pt) node[above left]  {\(-4+5i\)};
 
-% 2. Let
-% A = {z ∈ C : |z − 2 − 3i| < |z + 4 − 5i|},
-% B = {z ∈ C : 0 ≤ arg(z + 3 − 4i) < π/4}.
-% Sketch the sets A, B and A ∩ B.
+  % Perpendicular bisector: y = 3x + 7
+  \draw[thick,dashed,blue] plot[domain=-4:4] (\x,{3*\x+7})
+    node[right, xshift=2pt] {\(y=3x+7\)};
 
-% Include the PDF file for Problem 2
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth]{2025-04-28-Note-13-03.pdf}
-    \caption{Visualization for Problem 2}
-    \label{fig:problem2}
-\end{figure}
+  % Shade region closer to P (below the bisector)
+  % Intersection of bisector and bottom y=-1: x = -8/3 ≈ -2.6667
+  \fill[blue!20]
+    (-4,-1) -- (4,-1) -- (4,{3*4+7})
+    -- plot[domain=4:-2.6667] (\x,{3*\x+7}) -- cycle;
 
+  % Axes
+  \draw[->] (-4,0)--(4,0) node[right]{Re};
+  \draw[->] (0,-1)--(0,6) node[above]{Im};
+\end{tikzpicture}
+\end{center}
 
+%--------------------
+\section*{Set \(B\)}
+\[
+B = \{z\in\mathbb{C} : 0 \le \arg(z + 3 - 4i) < \tfrac\pi4\},
+\]
+i.e.\ the sector with vertex \(-3+4i\), between ray at angle \(0\) and \(\pi/4\).
+\begin{center}
+\begin{tikzpicture}[scale=0.7]
+  % Vertex
+  \coordinate (V) at (-3,4);
+  \fill (V) circle (2pt) node[below left]{\(-3+4i\)};
+  % Sector fill
+  \fill[red!20]
+    (V) -- ++(7,0)
+    arc[start angle=0,end angle=45,radius=7cm]
+    -- cycle;
+  % Boundary rays
+  \draw[thick,red] (V)--++(7,0) node[right]{angle\,0};
+  \draw[thick,red] (V)--++(5,5) node[above right]{\(\pi/4\)};
+  % Axes
+  \draw[->] (-6,0)--(6,0) node[right]{Re};
+  \draw[->] (0,-2)--(0,8) node[above]{Im};
+\end{tikzpicture}
+\end{center}
+
+%--------------------
+\section*{Intersection \(A\cap B\)}
+Shade only the points satisfying both conditions.
+\begin{center}
+\begin{tikzpicture}[scale=0.6]
+  % Key points
+  \coordinate (P) at (2,3);
+  \coordinate (Q) at (-4,5);
+  \coordinate (V) at (-3,4);
+
+  % Axes
+  \draw[->] (-6,0) -- (6,0) node[right]{Re};
+  \draw[->] (0,-2) -- (0,8) node[above]{Im};
+
+  % Perp-bisector of PQ: y=3x+7
+  \draw[dashed, blue, thick]
+    plot[domain=-6:6] (\x, {3*\x + 7});
+
+  % Sector rays from V
+  \draw[red, thick] (V) -- ++(7,0) node[right]{0};
+  \draw[red, thick] (V) -- ++(5,5) node[above right]{$\tfrac\pi4$};
+
+  % Intersection fill
+  \begin{scope}
+    % clip to A: half-plane below y=3x+7
+    \clip 
+      (-10,-10) -- (10,-10) --
+      plot[domain=10:-10] (\x, {3*\x + 7}) -- cycle;
+    % clip to B: sector at V
+    \clip 
+      (V) -- ++(7,0)
+      arc[start angle=0,end angle=45,radius=7cm] -- cycle;
+    % fill overlap
+    \fill[purple!50] (-10,-10) rectangle (10,10);
+  \end{scope}
+\end{tikzpicture}
+\end{center}
 \section*{Problem 3}
 \subsection*{(a)}
 \[
