--- a/math2/hw4/main.tex
+++ b/math2/hw4/main.tex
@@ -135,4 +135,73 @@ So, these are the results:
    106^{11} &\equiv 140 \mod 143 \\
 \end{align*}
 
+\section*{Problem 3}
+
+% 3. (a) Compute the solution set of the simultaneous equations
+% x ≡ 2 (mod 3),
+% x ≡ 5 (mod 7),
+% x ≡ 8 (mod 11)
+% by applying the Chinese remainder theorem twice.
+% (b) What are the last two digits of the number 4919? [Hint: We want to compute
+% the number 4919 (mod 100). Note that 100 = 25 × 4.]
+
+\subsection*{(a)}
+We have the system of equations:
+\[
+   \begin{cases}
+      x \equiv 2 \mod 3 \\
+      x \equiv 5 \mod 7 \\
+      x \equiv 8 \mod 11
+   \end{cases}
+\]
+Let's first solve the first two equations:
+\[
+   \begin{cases}
+      x \equiv 2 \mod 3 \\
+      x \equiv 5 \mod 7
+   \end{cases}
+\]
+
+From chinese remainder theorem we know that \(x = 14m + 15n\) where \(m\) and \(n\) are Bezout coefficients of \(3\) and \(7\).
+We can find them using the extended Euclidean algorithm:
+\begin{align*}
+   7 &= 2 \cdot 3 + 1, & u_2 = u_0 - 2u_1 = 1, \quad & v_2 = v_0 - 2v_1 = -2 \\
+   3 &= 3 \cdot 1 + 0
+\end{align*}
+
+\begin{align*}
+   m &= u_2 = 1 \\
+   n &= v_2 = -2 \\
+   x &= 14m + 15n \\
+   x &= 14 \cdot 1 + 15 \cdot (-2) \\
+   x &= 14 - 30 \\
+   x &= -16 \mod 21 \\
+   x &= 5 \mod 21 \\
+\end{align*}
+
+Now we have these two equations:
+\[
+   \begin{cases}
+      x \equiv 5 \mod 21 \\
+      x \equiv 8 \mod 11
+   \end{cases}
+\]
+We can solve this system of equations using the same method:
+\begin{align*}
+   21 &= 1 \cdot 11 + 10, & u_2 = u_0 - u_1 = 1, \quad & v_2 = v_0 - v_1 = -1 \\
+   11 &= 1 \cdot 10 + 1, & u_3 = u_1 - u_2 = -1, \quad & v_3 = v_1 - v_2 = 2 \\
+   10 &= 10 \cdot 1 + 0
+\end{align*}
+
+\begin{align*}
+   m &= u_3 = -1 \\
+   n &= v_3 = 2 \\
+   x &= 168m + 55n \\
+   x &= 168 \cdot (-1) + 55 \cdot 2 \\
+   x &= -168 + 110 \\
+   x &= -58 \mod 231 \\
+   x &= 173 \mod 231 \\
+\end{align*}
+
+
 \end{document}
